# pong

./: CMakeLists.txt
.cache/clangd/index/: ai.cpp.9F11528F2C5479CF.idx  ai.hpp.F0CBC1CEBEEDE411.idx  ball.cpp.D933D6E718AA53E1.idx  ball.hpp.40E310D0497C1FBD.idx  game.cpp.DD55DF7D3AC04913.idx  game.hpp.CA9E6769F785F39B.idx  gameRules.cpp.CBA46336F3BEC1C3.idx  gameRules.hpp.ED3CA70197734C84.idx  main.cpp.17534265BF31C971.idx  paddle.cpp.439DBCF0E83BD642.idx  paddle.hpp.F328FB794DFE79FA.idx  types.hpp.545D55A256EE506D.idx  update.cpp.FB2B8EC220E1C57C.idx  update.hpp.7A486F05E9D1DFEE.idx
config/: game.conf
include/: MainMenu.hpp  Menu.hpp  ai.hpp  audio.hpp  ball.hpp  draw.hpp  game.hpp  gameConfig.hpp  gameInit.hpp  gameRules.hpp  paddle.hpp  screenManager.hpp  types.hpp  update.hpp
src/: Menu.cpp  ai.cpp  audio.cpp  ball.cpp  draw.cpp  game.cpp  gameConfig.cpp  gameInit.cpp  gameRules.cpp  main.cpp  mainMenu.cpp  paddle.cpp  update.cpp
